erDiagram

    %% ---------------------------------------------------------
    %% CORE IDENTITY
    %% ---------------------------------------------------------
    USERS {
        uuid id PK
        string phone UK
        string email UK
        string password_hash
        string account_status "active, suspended"
        boolean is_verified
        string name
        string profile_photo
        numeric wallet_balance
    }

    ADMINS {
        uuid id PK
        uuid auth_user_id FK
        string name
        string email UK
        string role "super, support"
        jsonb permissions
    }

    ROLES {
        int id PK
        string role_name
    }

    USER_ROLES {
        uuid user_id FK
        int role_id FK
    }

    %% ---------------------------------------------------------
    %% WORKER MANAGEMENT
    %% ---------------------------------------------------------
    WORKER_PROFILES {
        uuid user_id PK, FK
        string worker_status
        string gov_id_number
        int experience_years
        float average_rating
        boolean is_available
    }

    VERIFICATION_REQUESTS {
        uuid id PK
        uuid worker_id FK
        string status "pending, approved"
        jsonb documents
        uuid reviewed_by FK
    }

    %% ---------------------------------------------------------
    %% SERVICES
    %% ---------------------------------------------------------
    CATEGORIES {
        int id PK
        string name UK
        string description
        numeric base_rate
        string icon
        boolean is_active
    }

    WORKER_CATEGORIES {
        uuid id PK
        uuid worker_id FK
        int category_id FK
        boolean is_primary
        numeric rate_override
    }

    %% ---------------------------------------------------------
    %% JOBS & BOOKINGS
    %% ---------------------------------------------------------
    JOBS {
        uuid job_id PK
        uuid user_id FK
        int skill_id FK
        uuid address_id FK
        float final_price
        string job_status "pending, completed"
        timestamp scheduled_at
    }

    JOB_ASSIGNMENTS {
        uuid job_id PK, FK
        uuid worker_id FK
        string assignment_status
        timestamp accepted_at
        timestamp completed_at
    }

    ADDRESSES {
        uuid address_id PK
        uuid user_id FK
        string address_line
        string city
        decimal latitude
        decimal longitude
    }

    %% ---------------------------------------------------------
    %% FINANCE
    %% ---------------------------------------------------------
    TRANSACTIONS {
        uuid transaction_id PK
        uuid job_id FK
        uuid from_user_id FK
        uuid to_user_id FK
        float amount
        string status "success, pending"
    }

    PAYMENT_DISPUTES {
        uuid id PK
        uuid booking_id FK
        uuid raised_by FK
        numeric amount_disputed
        string status
    }

    %% ---------------------------------------------------------
    %% FEEDBACK & ADMIN
    %% ---------------------------------------------------------
    RATINGS {
        uuid rating_id PK
        uuid job_id FK
        uuid from_user_id FK
        uuid to_user_id FK
        int rating_value
        text review_text
    }

    REPORTS {
        uuid id PK
        uuid reporter_id FK
        string report_type
        text description
        string status
    }

    BANNED_ENTITIES {
        uuid id PK
        uuid entity_id
        string reason
        boolean is_active
    }

    AUDIT_LOGS {
        uuid id PK
        uuid admin_id FK
        string action_type
        string target_type
        text description
    }

    ADMIN_NOTIFICATIONS {
        uuid id PK
        string title
        string priority
        boolean is_read
    }

    SYSTEM_SETTINGS {
        string key PK
        jsonb value
        boolean is_public
    }

    DAILY_STATISTICS {
        uuid id PK
        date date UK
        int total_bookings
        numeric revenue
    }

    %% ---------------------------------------------------------
    %% RELATIONSHIPS
    %% ---------------------------------------------------------
    
    %% Users & Identity
    USERS ||--o{ USER_ROLES : has
    ROLES ||--o{ USER_ROLES : assigned_to
    USERS ||--o| WORKER_PROFILES : "is a"
    USERS ||--o{ ADDRESSES : has
    USERS ||--o{ ADMINS : "linked auth"

    %% Worker Relations
    WORKER_PROFILES ||--o{ WORKER_CATEGORIES : "offers"
    CATEGORIES ||--o{ WORKER_CATEGORIES : "via"
    WORKER_PROFILES ||--o{ VERIFICATION_REQUESTS : submits
    ADMINS ||--o{ VERIFICATION_REQUESTS : reviews

    %% Jobs
    USERS ||--o{ JOBS : "requests"
    CATEGORIES ||--o{ JOBS : "requires"
    ADDRESSES ||--o{ JOBS : "at"
    JOBS ||--o| JOB_ASSIGNMENTS : "assigned to"
    WORKER_PROFILES ||--o{ JOB_ASSIGNMENTS : "accepts"

    %% Finance
    JOBS ||--o{ TRANSACTIONS : "payment for"
    USERS ||--o{ TRANSACTIONS : "sends/receives"
    JOBS ||--o{ PAYMENT_DISPUTES : "disputed"
    
    %% Feedback
    JOBS ||--o{ RATINGS : "reviewed"
    USERS ||--o{ RATINGS : "writes"

    %% Admin & Audit
    ADMINS ||--o{ AUDIT_LOGS : performs
    USERS ||--o{ REPORTS : creates
